--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -46,6 +46,7 @@
     var header = false;
     var curRowId = -1;
     var ProductNameList= [];
+    var ProductSku="";
     var name ="";
     $(document).ready(function() {
        $("#invAdj").jqGrid({
@@ -85,17 +86,21 @@
                                   dataInit: function(elem) {
                     curRowId = $('#invAdj').getGridParam('selrow');        
                     $(elem).autocomplete({source: getProductName(),autoFocus: true,minLength: 0, select:function (event, ui) {
-                   $('#invAdj').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
-                   $('#invAdj').jqGrid('setCell',curRowId,'productSku', getProductSku(ui.item.value));
-                    console.log(getSupplierNames(ui.item.value));
-                    console.log(getProductSku(ui.item.value));
-                    $('input#supplierName').val(getSupplierNames(ui.item.value));
-                    $('input#productSku').val(getProductSku(ui.item.value));
+                   
+                  $('#invAdj').jqGrid('setCell',curRowId,'supplierName', getSupplierNames(ui.item.value));
+                  $('input#supplierName').val(getSupplierNames(ui.item.value));
+                  $('#invAdj').jqGrid('setCell',curRowId,'productSku',getProductSku(ui.item.value));
+                  
+                  $('input#productSku').val(ProductSku.toString());
+                    
+                    
+                    
+                    
                 } });   
                                   }
                    }},
-                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text",editrules: { required: true }, editoptions: {readonly: 'readonly'}},
-                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text",editrules: { required: true }, editoptions: {readonly: 'readonly'}},
+                  { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
+                   { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
                    { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text"},
                    { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true, number: true },formatter:'select', editoptions:{value:getReasons()}},
@@ -256,8 +261,9 @@
         if (data != null) {
            
             for (var i = 0; i < data.length; i++) {
-                if(value == data[i].value)
+                if(value === data[i].value)
                 {
+
              Supplier= data[i].text;
                 }
                 } 
@@ -270,13 +276,13 @@
         }
 
               function getProductSku(value) {
-        var ProductSku= "";
         $.ajaxSetup( { "async": false } );
         $.getJSON('InvAdj/CreateProductSkuList', function(data) {
         if (data != null) {
             for (var i = 0; i < data.length; i++) {
-                if(data[i].value == value)
+                if(data[i].value== value)
                 {
+
              ProductSku=data[i].text;
                 } 
               }
@@ -284,7 +290,7 @@
 
             });
             $.ajaxSetup( { "async": true } );
-           return ProductSku; 
+           return ProductSku.toString(); 
 
         }
                 function getProductName() {
@@ -302,7 +308,7 @@
             });
             $.ajaxSetup( { "async": true } );
             
-            console.log(ProductNameList);
+
            return ProductNameList; 
 
         }
