addes SA controllers and viewmodels

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,6 +37,10 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                  <a class="dropdown-item" asp-area="" asp-controller="InvAdj" asp-action="Index">Inventory Adjustment</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="SaDamageRecoup" asp-action="Index">Damage/Recoup</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="SaExciseDuty" asp-action="Index">Excise Duty Paid</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="SaInternalTransfer" asp-action="Index">Internal Transfer</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="SaOutbound" asp-action="Index">Outbound Transfer</a>
+                                 <a class="dropdown-item" asp-area="" asp-controller="SaRelease" asp-action="Index">Release from Bond</a>
                                  <a class="dropdown-item" asp-area="" asp-controller="SaStockReceived" asp-action="Index">Stock Received</a>
                             </div>
                          </li>
