--- a/Views/invAdj/Index.cshtml
+++ b/Views/invAdj/Index.cshtml
@@ -6,10 +6,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Inventory Adjustment</h1>
+    <h2 class="display-4">Inventory Adjustment</h2>
 </div>
 <fieldset class="scheduler-border">
-  <legend class="scheduler-border">Create Header</legend>
   <div class="container-flow">
   <div class="row">
            <div class="col-sm-3">
@@ -42,7 +41,6 @@
 
     $.jgrid.defaults.styleUI = 'Bootstrap';
      $.jgrid.defaults.responsive = true;
-    var date;
     var header = false;
     var curRowId = -1;
     var ProductNameList= [];
@@ -99,11 +97,11 @@
                 } });   
                                   }
                    }},
-                  { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
+                   { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
-                   { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text"},
-                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true, number: true },formatter:'select', editoptions:{value:getReasons()}},
+                   { label: 'Updated Stock',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
+                   { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
 
                  ], 
@@ -145,8 +143,6 @@
        });
        $(document).ready(function () {  
            $('#date').val(date());
-       
-
        });
        $('#invAdj').setGridWidth(parseInt($(window).width()) - 20);
        $("#comments").on('change keyup paste', function () {
@@ -193,12 +189,12 @@
       }
         function date()
         {
+         var date;
          var currentDate = new Date();
          var day = ("0" + currentDate.getDate()).slice(-2);
          var month = ("0" + (currentDate.getMonth() + 1)).slice(-2);
          var today = currentDate.getFullYear() + "-" + (month) + "-" + (day);
          date = today.toString();
-         console.log(date);
          return date;
         }
     
