--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -9,53 +9,58 @@
     <h1 class="display-4">Outbound Transfer</h1>
 </div>
 <fieldset class="scheduler-border"  style="max-height: 18rem;">
-<div class="container-flow">
-    <div class="row">
-        <div class="col-sm-3">
-            <label style="font-size:10px;" for="date">Transaction Date:</label>
-            <input style="font-size:10px;" type="date" id="date" name="date">
-        </div>
-        <div class="col-sm-1"></div>
+    <div class="container-flow">
+        <div class="row">
+            <div class="col-sm-3">
+                <label style="font-size:10px;" for="date">Transaction Date:</label>
+                <input style="font-size:10px;" type="date" id="date" name="date">
+            </div>
+            <div class="col-sm-1"></div>
   
+        </div>
+        <div class="row">
+            <div class="col-sm-5">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label style="font-size:10px;" for="destDropdown" class="d-inline">Locations:</label>  
+                        <select style="font-size:10px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
+                    </div>
+                 </form>
+            </div>
+            <div class="col-sm-5">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label style="font-size:10px;" for="truckingCompDD" class="d-inline">Locations:</label>  
+                        <select style="font-size:10px;" class="form-control" id="truckingCompDD" name="truckingCompDD"></select> 
+                    </div>
+                 </form>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="ProbillNo:" aria-label="Probill Number:" aria-describedby="basic-addon2" id="probill"/>
+            </div>
+            <div class="col-sm-5">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label style="font-size:10px;" for="fromLocationsDropdown" class="d-inline">From Location:</label>  
+                        <select style="font-size:10px;" class="form-control" id="fromLocationsDropdown" name="fromLocationsDropdown"></select> 
+                    </div>
+                 </form>
+            </div>
+            <div class="col-sm-3">
+                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
+            </div>
+            <div class="col-sm-3 text-right">
+                <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
+            </div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="PO:" aria-label="PO:" aria-describedby="basic-addon2" id="purchaseOrder"/>
-         </div>
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Port of Entry:" aria-label="Port of Entry:" aria-describedby="basic-addon2" id="portEntry"/>
-        </div>
-        <div class="col-sm-5">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label style="font-size:10px;" for="locationsDropdown" class="d-inline">Locations:</label>  
-                    <select style="font-size:10px;" class="form-control" id="locationsDropdown" name="locationsDropdown"></select> 
-                </div>
-             </form>
-        </div>
-
-    </div>
-    <div class="row">
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Prev Trans #:" aria-label="Prev Trans #:" aria-describedby="basic-addon2" id="prevTransNo"/>
-        </div>
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Trans #:" aria-label="Trans #:" aria-describedby="basic-addon2" id="transNumber"/>
-        </div>
-
-        <div class="col-sm-3">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6">
-            <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
-        </div>
-        <div class="col-sm-3 text-right">
-            <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
-        </div>
-    </div>
-</div>
 </fieldset>
 
 
@@ -122,6 +127,7 @@
                    { label: 'Supplier',name: 'supplierName',fixed:true,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                    { label: 'Product Sku',name: 'productSku',fixed:true,width:80,editable: true, edittype:"text", editoptions: {readonly: 'readonly'}},
                  //  { label: 'Locations',name: 'inventoryLocationId',fixed:true,width:80, editable: true, edittype:"select",formatter:'select',editrules: { required: true }, editoptions:{value:getLocation()}},
+                   { label: 'Qty Available',name: 'amount',fixed:true,width:95,align:"right",editable: false, edittype:"text"},
                    { label: 'Quantity',name: 'amount',fixed:true,width:95,align:"right",editable: true, edittype:"text",editrules: { required: true, number: true }},
                  //  { label: 'Reasons',name: 'inventoryTxReasonsId',fixed:true,width:110, editable: true, edittype:"select",editrules: { required: true },formatter:'select', editoptions:{value:getReasons()}},
                    { label: 'Notes',name: 'comments',fixed:true,width:450, editable: true, edittype:"text",}
@@ -221,12 +227,10 @@
             console.log($("#date").val());
             var date = $("#date").val();
             var notes = $("#comments").val();
-            var purchaseOrder= $("#purchaseOrder").val();
-            var portEntry= $("#portEntry").val();
-            var locationsDropdown= $("#locationsDropdown").val();
-            var prevTransNo= $("#prevTransNo").val();
-            var transNumber= $("#transNumber").val();
-
+            var destination= $("#destDropdown").val();
+            var truckingCompany= $("#truckingCompDD").val();
+            var probillNo= $("#probill").val();
+            var fromLocationDropdown= $("#fromLocationsDropdown").val();
 
             $.ajaxSetup( { "async": false } );
             $.getJSON('saOutbound/CreateHeader?data='+date+'/'+destination+'/'+ truckingCompany+'/'+ probillNo+'/'+ fromLocationDropdown+'/'+ notes, function(data) {
