--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -24,12 +24,14 @@
                     </div>
                  </form>
             </div>
-            <div class="col-sm-3">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-2">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
             </div>
             <div class="col-sm-6">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
             </div>
+            <div class="col-sm-3"></div>
             <div class="col-sm-3 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>
@@ -153,6 +155,20 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+        $(document).ready(function () {  
+       $.ajax({  
+           type: "GET",  
+           url: "SaExciseDuty/CreateLocationList",  
+           data: "{}",  
+           success: function (data) {  
+               var s = '<option value="-1">Select a Location</option>';  
+               for (var i = 0; i < data.length; i++) {  
+                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+               }  
+               $("#locationsDropdown").html(s);  
+           }  
+       });  
+   });
               
     function IsProduct(value,colname)
         {
