--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -164,6 +164,21 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+               $(document).ready(function () {  
+       $.ajax({  
+           type: "GET",  
+           url: "SaInternalTransfer/CreateLocationList",  
+           data: "{}",  
+           success: function (data) {  
+               var s = '<option value="-1">Select a Location</option>';  
+               for (var i = 0; i < data.length; i++) {  
+                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+               }  
+               $("#toLocationsDropdown").html(s);  
+               $("#fromLocationsDropdown").html(s);  
+           }  
+       });  
+   });
               
     function IsProduct(value,colname)
         {
