--- a/Views/SaOutbound/Index.cshtml
+++ b/Views/SaOutbound/Index.cshtml
@@ -22,7 +22,7 @@
             <div class="col-sm-5">
                 <form class="form-inline">
                     <div class="form-group">
-                        <label style="font-size:10px;" for="destDropdown" class="d-inline">Locations:</label>  
+                        <label style="font-size:10px;" for="destDropdown" class="d-inline">Destination:</label>  
                         <select style="font-size:10px;" class="form-control" id="destDropdown" name="destDropdown"></select> 
                     </div>
                  </form>
@@ -30,8 +30,8 @@
             <div class="col-sm-5">
                 <form class="form-inline">
                     <div class="form-group">
-                        <label style="font-size:10px;" for="truckingCompDD" class="d-inline">Locations:</label>  
-                        <select style="font-size:10px;" class="form-control" id="truckingCompDD" name="truckingCompDD"></select> 
+                        <label style="font-size:10px;" for="truckingComp" class="d-inline">Trucking Company:</label>  
+                        <select style="font-size:10px;" class="form-control" id="truckingComp" name="truckingComp"></select> 
                     </div>
                  </form>
             </div>
@@ -56,6 +56,7 @@
             <div class="col-sm-6">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
             </div>
+            <div class="col-sm-3"></div>
             <div class="col-sm-3 text-right">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>
@@ -180,6 +181,20 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+                $(document).ready(function () {  
+       $.ajax({  
+           type: "GET",  
+           url: "saOutbound/CreateLocationList",  
+           data: "{}",  
+           success: function (data) {  
+               var s = '<option value="-1">Select a Location</option>';  
+               for (var i = 0; i < data.length; i++) {  
+                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+               }  
+               $("#fromLocationsDropdown").html(s);  
+           }  
+       });  
+   });
               
     function IsProduct(value,colname)
         {
@@ -230,7 +245,7 @@
             var destination= $("#destDropdown").val();
             var truckingCompany= $("#truckingCompDD").val();
             var probillNo= $("#probill").val();
-            var fromLocationDropdown= $("#fromLocationsDropdown").val();
+            var fromLocationDropdown= $("#fromLocationsDropdown").id();
 
             $.ajaxSetup( { "async": false } );
             $.getJSON('saOutbound/CreateHeader?data='+date+'/'+destination+'/'+ truckingCompany+'/'+ probillNo+'/'+ fromLocationDropdown+'/'+ notes, function(data) {
