--- a/Views/SaRelease/Index.cshtml
+++ b/Views/SaRelease/Index.cshtml
@@ -174,6 +174,20 @@
        $("#save").on('click', function () {
            SaveHeader();
         });
+                $(document).ready(function () {  
+       $.ajax({  
+           type: "GET",  
+           url: "SaRelease/CreateLocationList",  
+           data: "{}",  
+           success: function (data) {  
+               var s = '<option value="-1">Select a Location</option>';  
+               for (var i = 0; i < data.length; i++) {  
+                   s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';  
+               }  
+               $("#locationsDropdown").html(s);  
+           }  
+       });  
+   });
               
     function IsProduct(value,colname)
         {
