--- a/Views/SaExciseDuty/Index.cshtml
+++ b/Views/SaExciseDuty/Index.cshtml
@@ -15,8 +15,9 @@
                 <label style="font-size:10px;" for="date">Transaction Date:</label>
                 <input style="font-size:10px;" type="date" id="date" name="date">
             </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-5">
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
                 <form class="form-inline">
                     <div class="form-group">
                         <label style="font-size:10px;" for="locationsDropdown" class="d-inline">Locations:</label>  
@@ -28,11 +29,13 @@
             <div class="col-sm-2">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
             </div>
+        </div>
+        <div class="row">
             <div class="col-sm-6">
                 <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
             </div>
-            <div class="col-sm-3"></div>
-            <div class="col-sm-3 text-right">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-3">
                 <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
             </div>
         </div>
