--- a/Views/SaInternalTransfer/Index.cshtml
+++ b/Views/SaInternalTransfer/Index.cshtml
@@ -15,16 +15,10 @@
             <label style="font-size:10px;" for="date">Transaction Date:</label>
             <input style="font-size:10px;" type="date" id="date" name="date">
         </div>
-        <div class="col-sm-1"></div>
-        <div class="col-sm-5">
-            <form class="form-inline">
-                <div class="form-group">
-                    <label style="font-size:10px;" for="toLocationsDropdown" class="d-inline">To Location:</label>  
-                    <select style="font-size:10px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
-                </div>
-             </form>
-        </div>
-        <div class="col-sm-5">
+        <div class="col-sm-1"></div>    
+    </div>
+    <div class="row">
+        <div class="col-sm-3">
             <form class="form-inline">
                 <div class="form-group">
                     <label style="font-size:10px;" for="fromLocationsDropdown" class="d-inline">From Location:</label>  
@@ -32,16 +26,25 @@
                 </div>
              </form>
         </div>
-
+        <div class="col-sm-3">
+            <form class="form-inline">
+                <div class="form-group">
+                    <label style="font-size:10px;" for="toLocationsDropdown" class="d-inline">To Location:</label>  
+                    <select style="font-size:10px;" class="form-control" id="toLocationsDropdown" name="toLocationsDropdown"></select> 
+                </div>
+             </form>
+        </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-5">
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="Notes:" aria-label="Notes:" aria-describedby="basic-addon2" id="comments"/>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-1"></div> 
+        <div class="col-sm-2">
             <input style="font-size:10px; border-radius: 0 !important" type="text" class="form-control" placeholder="SA Code:" aria-label="SA Code:" aria-describedby="basic-addon2" id="saCode" readonly/>
         </div>
-        <div class="col-sm-3 text-right">
+        <div class="col-sm-1"></div> 
+        <div class="col-sm-1 text-right">
             <button class="btn btn-outline-secondary" style="font-size:10px;" id="save" type="button">Save</button>  
         </div>
     </div>
